--- a/boot03/src/main/resources/application.properties
+++ b/boot03/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.username=elmo
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging.level.org.hibernate=info
+logging.level.org.hiibernate=info
